--- a/viewer-prototype/tsconfig.json
+++ b/viewer-prototype/tsconfig.json
@@ -11,7 +11,7 @@
         "jsx": "react",
         "lib": [
             "es6",
-            "dom"
+            "dom",
         ],
         "sourceMap": true,
         "rootDir": "src",
